--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,15 @@ a, a:hover, a:focus, a:visited
 .logo {
   width: 100%;
   height: auto;
-  max-width: 400px;
-  max-height: 289px;
+  max-width: 800px;
+}
+
+.flex {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.flex.col {
+  display: flex;
+  flex-flow: column wrap;
 }
